src/include/lem/solarix/solarix_grammar_engine.h



 typedef void* HGREN_STR;

 typedef void* HGREN_WCOORD;

FAIND_API(HGREN) sol_CreateGrammarEngineA( const char *DictionaryXml );



// Destroy the instance of grammatical dicrionary and free all allocated resources
// http://www.solarix.ru/api/en/sol_DeleteGrammarEngine.shtml
FAIND_API(int) sol_DeleteGrammarEngine( HGREN hEngine );



// Return the Solarix project version info.
// Если указатели Major, Minor, Build не равны NULL, то через них
// возвращаются соответствующие части номера версии компонента.
//
// Возвращает 0 для DEMO, 1 для PRO, 2 для PREMIUM
FAIND_API(int) sol_GetVersion( HGREN hEngine, int *Major, int *Minor, int *Build );


// Возвращает номер версии загруженного словаря.
// http://www.solarix.ru/api/en/sol_DictionaryVersion.shtml
FAIND_API(int) sol_DictionaryVersion( HGREN hEngine );



// Count the total number of entries in dictionary.
// Сколько словарных статей в словаре.
// http://www.solarix.ru/api/ru/sol_CountEntries.shtml
FAIND_API(int) sol_CountEntries( HGREN hEngine );


// Count the total number of wordforms in dictionary.
// Сколько грамматических форм по всем словарным статьям в лексиконе
FAIND_API(int) sol_CountForms( HGREN hEngine );


// Статистика тезауруса: сколько записей всего.
// http://www.solarix.ru/api/ru/sol_CountLinks.shtml
FAIND_API(int) sol_CountLinks( HGREN hEngine );


// Returns the max lexem length
// Возвращает максимальную длину лексемы
// http://www.solarix.ru/api/en/sol_MaxLexemLen.shtml
FAIND_API(int) sol_MaxLexemLen( HGREN hEngine );



// ***************************************************************************
// Find the word entry index.
// Поиск индекса словарной статьи в лексиконе.
// http://www.solarix.ru/api/en/sol_FindEntry.shtml
// ***************************************************************************
FAIND_API(int) sol_FindEntry(
                             HGREN hEngine,
                             const wchar_t *Word, // Entry name
                             int ClassID,         // Required grammatical class (part of speech) ID
                             int LanguageID       // Language ID (if ambiguous)
                            );



// http://www.solarix.ru/api/en/sol_FindClass.shtml
FAIND_API(int) sol_FindClass( HGREN hEngine, const wchar_t *ClassName );


// http://www.solarix.ru/api/en/sol_FindEnum.shtml
FAIND_API(int) sol_FindEnum( HGREN hEngine, const wchar_t *EnumName );


// http://www.solarix.ru/api/en/sol_FindEnumState.shtml
FAIND_API(int) sol_FindEnumState( HGREN hEngine, int EnumID, const wchar_t *StateName );


// Поиск всех словоформ для указанного слова, с возможным учетом связанных
// по тезаурусу. Возвращается объект со списком строк.
FAIND_API(HGREN_STR) sol_FindStringsEx(
                                       HGREN hEngine,
                                       const wchar_t *Word,
                                       int Allow_Dynforms,
                                       int Synonyms,
                                       int Grammar_Links,
                                       int Translations,
                                       int Semantics,
                                       int nJumps
                                      );



FAIND_API(int) sol_CountStrings( HGREN_STR hStrings );

FAIND_API(int) sol_DeleteStrings( HGREN_STR hStrings );



// Возвращает "имя" словарной статьи - обычно это базовая форма,
// но могут быть особые случаи (например, статьи ЕСТЬ - кушать
// и ЕСТЬ - иметься). Вернет 0 в случае успеха, -1 ошибка.
// http://www.solarix.ru/api/en/sol_GetEntryName.shtml
FAIND_API(int) sol_GetEntryName( HGREN hEngine, int EntryID, wchar_t *Result );



// Возвращает индекс грамматического класса, к которому относится словарная статья.
// Returns the part of speech ID for the word entry
// http://www.solarix.ru/api/en/sol_GetEntryClass.shtml
FAIND_API(int) sol_GetEntryClass( HGREN hEngine, int EntryID );



// Возвращает имя грамматического класса по его индексу
// Returns the part of speech name
// http://www.solarix.ru/api/en/sol_GetClassName.shtml
FAIND_API(int) sol_GetClassName( HGREN hEngine, int ClassID, wchar_t *Result );



// Returns the gender of noun (unapplayable for English) 
//
// Возвращает род существительного (неприменимо для английского)
// http://www.solarix.ru/grammar/gender.shtml
FAIND_API(int) sol_GetNounGender( HGREN hEngine, int EntryIndex );


// Склонение существительного - возвращает в буфере форму указанной через 
// EntryIndex словарной статьи с заданным числом Number и в нужном падеже Case.
// http://www.solarix.ru/for_developers/russian-noun-declension.shtml
FAIND_API(int) sol_GetNounForm(
                               HGREN hEngine,   
                               int EntryIndex,
                               int Number,
                               int Case,
                               wchar_t *Result
                              );



// **************************************************************************
// Спряжение глагола - возвращается форма в нужном числе Number, роде Gender,
// времени Tense и лице Person.
// http://www.solarix.ru/for_developers/russian-verb-conjugation.shtml
// **************************************************************************
FAIND_API(int) sol_GetVerbForm(
                               HGREN hEngine,  
                               int EntryIndex,
                               int Number,
                               int Gender,
                               int Tense,
                               int Person, 
                               wchar_t *Result
                               );



// *************************************************************************
// Склонение прилагательного в нужное число Number, род Gender, падеж Case,
// форму одушевленности Anim, краткую-полную форму Shortness, форму
// сравнения Compar_Form.
// http://www.solarix.ru/for_developers/russian-adjective-declension.shtml
// *************************************************************************
FAIND_API(int) sol_GetAdjectiveForm(
                                    HGREN hEngine,
                                    int EntryIndex,
                                    int Number,
                                    int Gender,
                                    int Case,
                                    int Anim,
                                    int Shortness,
                                    int Compar_Form, 
                                    wchar_t *Result
                                   );


// ***********************************************************************
// Согласование существительного и числительного. Отдельно задается падеж
// и (опционально) - одушевленность/неодушевленность.
// ***********************************************************************
FAIND_API(int) sol_CorrNounNumber(
                                 HGREN hEngine, 
                                 int EntryIndex,   // id_entry
                                 int Value,        // с каким числом согласуется
                                 int Case,         // NOMINATIVE_CASE_ru
                                 int Anim,         // INANIMATIVE_FORM_ru
                                 wchar_t *Result      // буфер для результата
                                 );


FAIND_API(int) sol_CorrVerbNumber(
                                 HGREN hEngine, 
                                 int EntryIndex,
                                 int Value,
                                 int Gender, 
                                 int Tense,
                                 wchar_t *Result
                                 );


FAIND_API(int) sol_CorrAdjNumber(
                                HGREN hEngine, 
                                int EntryIndex,
                                int Value,
                                int Case, 
                                int Gender,
                                int Anim,  
                                wchar_t *Result
                               );


// Поиск словарной статьи и словоформы в ней, для которой лексическое содержимое
// точно соответствует заданной строке Word. Возвращает индекс статьи EntryIndex,
// индекс формы Form, и индекс грамматического класса у найденной статьи.
FAIND_API(int) sol_FindWord(
                            HGREN hEngine, 
                            const wchar_t *Word,
                            int *EntryIndex,
                            int *Form,
                            int *Class 
                           );




// ****************************************************************
// Число, заданное целочисленным аргументом value, преобразуем в
// текстовое представление (именительный падеж)
// ****************************************************************
FAIND_API(int)sol_Value2Text(
                             HGREN hEngine, 
                             wchar_t *Result,
                             int Value,
                             int Gender
                            );


// Быстрый поиск слова. Возвращается некий числовой код, одинаковый для всех
// словоформ в рамках одной словарной статьи, либо -1 если поиск не удался.
FAIND_API(int) sol_SeekWord( HGREN hEngine, const wchar_t *word, int Allow_Dynforms );



// Словарная статья приводится к семантически эквивалентному
// существительному, например "ИСКАТЬ->ПОИСК". Для работы необходим
// тезаурус (недоступен в бесплатных версиях словаря)!
// Входной аргумент EntryIndex - результат предыдущего вызова sol_FindEntry.
// Возвращается индекс словарной статьи (существительное) для использования,
// например, в sol_GetNounForm, либо -1 если привести к существительному
// не представляется возможным.
FAIND_API(int) sol_TranslateToNoun( HGREN hEngine, int EntryIndex );



// Приведение словарной статьи к семантически или грамматически связанной
// неопределенной форме глагола (инфинитиву).
// http://www.solarix.ru/for_developers/api/lemmatization.shtml
FAIND_API(int) sol_TranslateToInfinitive( HGREN hEngine, int EntryIndex );



// Приведение к базовой форме.
// Вернет 1, если преобразование имело место, 0 если слово не найдено в словаре.
// Результат возвращается в Word, заменяя исходное слово.
// Если слово допускает несколько альтернативных базовых форм, то будет
// реализовано какое-то (неопределенно) одно.
//
// http://www.solarix.ru/for_developers/api/lemmatization.shtml
FAIND_API(int) sol_TranslateToBase( HGREN hEngine, wchar_t *Word, int AllowDynforms );
 


// Возвращает список базовых форм для слова. 
// http://www.solarix.ru/for_developers/api/lemmatization.shtml
FAIND_API(HGREN_STR) sol_TranslateToBases( HGREN hEngine, const wchar_t *Word, int AllowDynforms );



// http://www.solarix.ru/api/ru/sol_ProjectWord.shtml
// Нахождение всех проекций указанного слова и работа с полученным списком.
// Find all possible mappings of the word to the lexicon and return tha handle of the list. 
FAIND_API(HGREN_WCOORD) sol_ProjectWord( HGREN hEngine, const wchar_t *Word, int Allow_Dynforms );


FAIND_API(HGREN_WCOORD) sol_ProjectMisspelledWord( HGREN hEngine, const wchar_t *Word, int Allow_Dynforms, int nmaxmiss );


// http://www.solarix.ru/api/ru/sol_CountProjections.shtml
// Count the number of mappings in the list. 
FAIND_API(int) sol_CountProjections( HGREN_WCOORD hList );


// http://www.solarix.ru/api/ru/sol_DeleteProjections.shtml
// Delete the results of sol_ProjectWord
FAIND_API(void) sol_DeleteProjections( HGREN_WCOORD hList );


// http://www.solarix.ru/api/ru/sol_GetIEntry.shtml
// Return the entry id (primary key). The entry properties can be accessed 
// via id, see sol_GetEntryName for example.
// Возвращается id (primary key) словарной статьи среди проекций
FAIND_API(int) sol_GetIEntry( HGREN_WCOORD hList, int Index );


FAIND_API(int) sol_LemmatizeWord( HGREN hEngine, wchar_t *word, int Allow_Dynforms );